2011-07-04 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Add COMAK developer's config_path fix 

2011-07-04 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Add COMAK developer's environment patch to support LXDE, Fluxbox, Gnome and Gnome3 

2011-07-04 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Latest changes, update ChangeLog 

2011-06-06 Gökmen Göksel <gokmen@pardus.org.tr>
         * - We have to limit all sizes, not just minimum size.

2011-05-18 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Add QProgressWidget, just a template for now 

2011-05-18 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Make getWidget method flexible 

2011-05-17 Gökmen Göksel <gokmen@pardus.org.tr>
         * - emit 'currentChanged()' signal when something changed 

2011-05-17 Gökmen Göksel <gokmen@pardus.org.tr>
         * - getCurrentWidget helper method added ...

2011-03-30 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Add option exceptionHandler 

2011-03-30 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Make callback function optional 

2011-03-30 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Disable all other widgets except the current one when animation is finished 

2011-03-29 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Add additional SessionTypes variable to check possible environments names
         * With KDE 4.6, KDE developers decided (!#?) to use "kde-plasma" as environment
         * name instead of "kde", so one environment name is not enough to check current
         * environment, SessionTypes variable solves this problem.

2011-03-11 Gökmen Göksel <gokmen@pardus.org.tr>
         * - Add option to select move direction LeftToRight (ltr) or TopToBottom(ttb)
         * - Add option to return first page if next requested at the last page

2011-03-09 Gökmen Göksel <gokmen@pardus.org.tr>
         * - More documentation, in/out methods are working now ! 

2011-03-09 Gökmen Göksel <gokmen@pardus.org.tr>