@@ -1,3 +1,6 @@
+2011-11-25 Gökmen Göksel <gokmen@pardus.org.tr>
+         * - Add Gnome3 IconTheme support
+
 2011-07-04 Gökmen Göksel <gokmen@pardus.org.tr>
          * - Add COMAK developer's config_path fix 
 
